--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@
   
   body{
     background-color: #F9F6F4;
+    font-family: 'Lato';
   }
 
 
@@ -57,6 +58,7 @@ color: white;
   }
 
   
-  
+      @keyframes fadeIn { from {opacity:0; transform:scale(.98)} to {opacity:1; transform:scale(1)} }
+   .animate-fadeIn { animation: fadeIn .25s ease-out; }
   
   
