--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
   
   /* --- tighten spacing between dots if desired --------------------- */
   .mobile-slider .slick-dots li {
-    margin: 5px 2px;       /* adjust horizontal gap    */
+    margin: 0px 0px;       /* adjust horizontal gap    */
   }
   
   body{
@@ -56,6 +56,34 @@ color: white;
     background-color: white;
     color: white;
   }
+
+  
+/* Base dot style: invisible background */
+.custom-dot {
+  width: 8px;
+  height: 8px;
+  border-radius: 9999px;
+  transition: all 0.3s ease;
+}
+
+/* Inactive state */
+.slick-dots li .custom-dot {
+  background-color: #44322B;
+}
+
+/* Active state */
+.slick-dots li.slick-active .custom-dot {
+  width: 50px;
+  height: 8px;
+  background-color: white;
+}
+
+
+
+
+
+
+
 
   
       @keyframes fadeIn { from {opacity:0; transform:scale(.98)} to {opacity:1; transform:scale(1)} }
